fix: on narrow screens, allow the vk toolbar to be small

--- a/css/virtual-keyboard.less
+++ b/css/virtual-keyboard.less
@@ -276,6 +276,7 @@
       /* Phone */
       @media only screen and (max-width: 767px) {
         width: 365px;
+        min-width: 365px;
         max-width: 100vw; // iPhone 5 is 320px
       }
 
